# Line-Counter-CLI-Tool

./: Cargo.toml  LICENSE  README.md  test.txt
src/: main.rs
