[package]
name = "cli_tool"
version = "0.1.0"
edition = "2021"
authors = ["Efe Ativie <efeativie@gmail.com>"]
description = "A CLI tool that reads a file and prints the number of lines in that file."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
